--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "postcss-selector-source",
   "version": "0.0.0",
-  "description": "A PostCSS plugin for finding the original line and column position of your CSS selectors and declarations from your pre-processed SASS/SCSS files",
+  "description": "A PostCSS plugin for finding the original line and column position of your CSS selectors and declarations from your pre-processed SASS/SCSS/LESS/Stylus files",
   "main": "dist/index.js",
   "scripts": {
     "test": "gulp",
@@ -44,11 +44,13 @@
     "gulp-plumber": "^0.6.6",
     "isparta": "^2.0.0",
     "jshint-stylish": "^1.0.0",
+    "less": "^2.5.1",
     "mkdirp": "^0.5.0",
     "mocha": "^2.1.0",
     "node-sass": "^3.2.0",
     "sinon": "^1.12.2",
-    "sinon-chai": "^2.7.0"
+    "sinon-chai": "^2.7.0",
+    "stylus": "^0.52.0"
   },
   "nodeBoilerplateOptions": {
     "mochaGlobals": [
