--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   },
   "dependencies": {
     "postcss": "^4.1.16",
-    "scouter": "git://github.com/a-axton/scouter.git#master",
+    "scouter": "git://github.com/divshot/scouter.git#master",
     "source-map": "^0.4.4"
   }
 }
