modified the way plugin handles source maps

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     ]
   },
   "dependencies": {
+    "convert-source-map": "^1.1.1",
     "postcss": "^5.0.6",
     "scouter": "git://github.com/divshot/scouter.git#master",
     "source-map": "^0.4.4"
